--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "@vueuse/math": "^10.7.2",
     "@vueuse/router": "^10.7.2",
     "@vueuse/shared": "^10.7.2",
+    "client-ext-animevsub-helper": "^1.0.31",
     "dayjs": "^1.11.10",
+    "hls.js": "^1.5.8",
     "idb-keyval": "^6.2.1",
     "iso-639-1": "^3.1.0",
     "nypm": "^0.3.6",
@@ -81,8 +83,8 @@
     "@iconify/json": "^2.2.176",
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
     "@pinia/testing": "^0.1.3",
-    "@quasar/app-vite": "^1.7.3",
-    "@quasar/cli": "^2.3.0",
+    "@quasar/app-vite": "^1.8.5",
+    "@quasar/cli": "^2.4.1",
     "@quasar/icongenie": "^3.1.1",
     "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.0",
     "@quasar/quasar-app-extension-testing-unit-vitest": "^0.4.0",
@@ -94,6 +96,7 @@
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "@unocss/transformer-directives": "^0.58.4",
+    "@unocss/transformer-variant-group": "^0.59.4",
     "@vitest/ui": "^1.2.2",
     "@vitest/web-worker": "^1.2.2",
     "@vue-macros/volar": "^0.18.11",
@@ -105,7 +108,6 @@
     "cypress": "^13.6.4",
     "dotenv": "^16.4.1",
     "envalid": "^8.0.0",
-    "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.15.1",
@@ -126,18 +128,19 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "unocss": "^0.58.4",
+    "unocss-preset-scrollbar": "^0.3.1",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.3",
     "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-define-options": "^1.4.2",
-    "vite": "^2.9.16",
+    "vite": "4",
     "vite-imagetools": "^6.2.9",
     "vite-plugin-image-optimizer": "^1.1.7",
     "vite-plugin-image-presets": "^0.3.4",
     "vite-plugin-pages": "^0.32.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vitest": "^1.2.2",
+    "vitest": "^1.5.3",
     "vitest-fetch-mock": "^0.2.2",
     "vue-tsc": "^1.8.27",
     "workbox-build": "^7.0.0",
@@ -149,8 +152,8 @@
     "workbox-strategies": "^7.0.0"
   },
   "overrides": {
-    "vite": "^2.9.16",
-    "@vitejs/plugin-vue": "^4.0.0"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "vite": "^4"
   },
   "engines": {
     "node": "^20 || ^19 || ^18 || ^16 || ^14.19",
