--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
     "quasar": "^2.16.0",
     "register-service-worker": "^1.7.2",
     "set-cookie-parser": "^2.6.0",
-    "shinuse": "tachibana-shin/shinuse",
     "swiper": "^11.0.5",
     "vue": "^3.4.15",
     "vue-i18n": "^9.9.1",
@@ -84,7 +83,7 @@
     "@iconify/json": "^2.2.176",
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
     "@pinia/testing": "^0.1.3",
-    "@quasar/app-vite": "^1.9.1",
+    "@quasar/app-vite": "^2.0.0-beta.14",
     "@quasar/cli": "^2.4.1",
     "@quasar/icongenie": "^3.1.1",
     "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.0",
