--- a/package.json
+++ b/package.json
@@ -93,10 +93,11 @@
     "@tachibana-shin/vite-plugin-pages": "0.31.1-beta.1",
     "@testing-library/vue": "^8.0.1",
     "@types/node": "20.11.13",
+    "@types/prompts": "^2.4.9",
     "@types/serviceworker": "^0.0.82",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "@unocss/transformer-directives": "^0.58.4",
+    "@unocss/transformer-directives": "^0.60.2",
     "@unocss/transformer-variant-group": "^0.60.0",
     "@vitest/ui": "^1.2.2",
     "@vitest/web-worker": "^1.2.2",
@@ -129,7 +130,7 @@
     "svgo": "^3.2.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "unocss": "^0.60.0",
+    "unocss": "^0.60.2",
     "unocss-preset-scrollbar": "^0.3.1",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.3",
@@ -144,7 +145,7 @@
     "vite-plugin-vue-layouts": "^0.11.0",
     "vitest": "^1.5.3",
     "vitest-fetch-mock": "^0.2.2",
-    "vue-tsc": "^1.8.27",
+    "vue-tsc": "^2.0.17",
     "workbox-build": "^7.0.0",
     "workbox-cacheable-response": "^7.0.0",
     "workbox-core": "^7.0.0",
