--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
     "lint": "eslint --ext .js,.ts,.vue ./",
     "pretit": "prettier \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "format": "prettier --write \"**/*.{js,ts,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "pnpm test:unit:ci && pnpm test:component:ci",
-    "test:watch": "pnpm test:unit",
-    "test:all": "pnpm test -r",
+    "test": "bun run test:unit:ci && bun run test:component:ci",
+    "test:watch": "bun run test:unit",
+    "test:all": "bun run test -r",
     "dev": "quasar dev",
-    "dev:pwa": "pnpm dev -m pwa",
-    "dev:android": "pnpm dev -m capacitor -T android",
-    "dev:android:ci": "cross-env TEST=true pnpm dev:android",
-    "dev:ios": "pnpm dev -m capacitor -T ios",
-    "dev:ios:ci": "cross-env TEST=true pnpm dev:ios",
-    "build": "pnpm build:npm && quasar build",
-    "build:pwa": "pnpm build -m pwa",
-    "build:android": "pnpm build -m capacitor -T android",
-    "build:android:ci": "cross-env TEST=true pnpm build:android",
-    "build:ios": "pnpm build -m capacitor -T ios",
-    "build:ios:ci": "cross-env TEST=true pnpm build:ios",
-    "build:npm": "pnpm --filter ./npm/* run build",
-    "build:capgo": "pnpm -C src-capacitor exec pnpx @capgo/cli bundle zip",
+    "dev:pwa": "bun run dev -m pwa",
+    "dev:android": "bun run dev -m capacitor -T android",
+    "dev:android:ci": "cross-env TEST=true bun run dev:android",
+    "dev:ios": "bun run dev -m capacitor -T ios",
+    "dev:ios:ci": "cross-env TEST=true bun run dev:ios",
+    "build": "bun run build:npm && quasar build",
+    "build:pwa": "bun run build -m pwa",
+    "build:android": "bun run build -m capacitor -T android",
+    "build:android:ci": "cross-env TEST=true bun run build:android",
+    "build:ios": "bun run build -m capacitor -T ios",
+    "build:ios:ci": "cross-env TEST=true bun run build:ios",
+    "build:npm": "bun run --filter ./npm/* run build",
+    "build:capgo": "bun run -C src-capacitor exec pnpx @capgo/cli bundle zip",
     "typing": "vue-tsc --noEmit",
-    "ci": "pnpm format && pnpm lint --fix && pnpm typing && pnpm test:unit:ci",
+    "ci": "bun run format && bun run lint --fix && bun run typing && bun run test:unit:ci",
     "nx": "nx run-many -t",
     "gen:icon:cap": "icongenie generate -m capacitor -i src/assets/app_icon.png -b src/assets/bg-blur.png --png-color 000    --skip-trim",
     "gen:icon:pwa": "icongenie generate -m pwa -i src/assets/app_icon.png -b src/assets/bg-blur.png --png-color 000   --skip-trim",
@@ -50,7 +50,7 @@
     "release:pwa": "bumpp --commit \"(chore): release PWA %s\" --tag \"pwa@%s\"",
     "release:android": "tsx scripts/bumpp-android.ts",
     "release:ios": "tsx scripts/bumpp-ios.ts",
-    "release:npm": "pnpm --filter ./npm/* run release"
+    "release:npm": "bun run --filter ./npm/* run release"
   },
   "dependencies": {
     "@hannoeru/eslint-plugin": "^0.9.7",
