--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tonarinoae",
   "packageName": "git.shin.tonarinoae",
   "version": "0.0.1",
+  "type": "module",
   "description": "となりのアニメへんたい (Tonari no Anime Ecchi)",
   "productName": "Example",
   "productDescription": "となりのアニメへんたい (Tonari no Anime Ecchi)",
@@ -21,19 +22,18 @@
     "dev:android:ci": "cross-env TEST=true bun run dev:android",
     "dev:ios": "bun run dev -m capacitor -T ios",
     "dev:ios:ci": "cross-env TEST=true bun run dev:ios",
-    "build": "bun run build:npm && quasar build",
+    "build": "quasar build",
     "build:pwa": "bun run build -m pwa",
     "build:android": "bun run build -m capacitor -T android",
     "build:android:ci": "cross-env TEST=true bun run build:android",
     "build:ios": "bun run build -m capacitor -T ios",
     "build:ios:ci": "cross-env TEST=true bun run build:ios",
-    "build:npm": "bun run --filter ./npm/* run build",
     "build:capgo": "bun run -C src-capacitor exec pnpx @capgo/cli bundle zip",
     "typing": "vue-tsc --noEmit",
     "ci": "bun run format && bun run lint --fix && bun run typing && bun run test:unit:ci",
     "nx": "nx run-many -t",
-    "gen:icon:cap": "icongenie generate -m capacitor -i src/assets/app_icon.png -b src/assets/bg-blur.png --png-color 000    --skip-trim",
-    "gen:icon:pwa": "icongenie generate -m pwa -i src/assets/app_icon.png -b src/assets/bg-blur.png --png-color 000   --skip-trim",
+    "gen:icon:cap": "icongenie generate -m capacitor -i src/assets/app_icon@large.png -b src/assets/bg-blur.png --png-color 000    --skip-trim",
+    "gen:icon:pwa": "icongenie generate -m pwa -i src/assets/app_icon@large.png -b src/assets/bg-blur.png --png-color 000   --skip-trim",
     "test:unit:ui": "vitest --ui",
     "test:unit": "vitest",
     "test:unit:ci": "vitest run",
@@ -99,6 +99,7 @@
     "@typescript-eslint/parser": "^7.8.0",
     "@unocss/transformer-directives": "^0.60.2",
     "@unocss/transformer-variant-group": "^0.60.0",
+    "@unocss/vite": "^0.60.2",
     "@vitest/ui": "^1.2.2",
     "@vitest/web-worker": "^1.2.2",
     "@vue-macros/volar": "^0.18.11",
@@ -136,14 +137,14 @@
     "unplugin-icons": "^0.18.3",
     "unplugin-vue-components": "^0.27.0",
     "unplugin-vue-define-options": "^1.4.2",
-    "vite": "4",
+    "vite": "5",
     "vite-imagetools": "^6.2.9",
     "vite-plugin-image-optimizer": "^1.1.7",
     "vite-plugin-image-presets": "^0.3.4",
     "vite-plugin-pages": "^0.32.0",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-vue-layouts": "^0.11.0",
-    "vitest": "^1.5.3",
+    "vitest": "0",
     "vitest-fetch-mock": "^0.2.2",
     "vue-tsc": "^2.0.17",
     "workbox-build": "^7.0.0",
@@ -155,8 +156,7 @@
     "workbox-strategies": "^7.0.0"
   },
   "overrides": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "vite": "^4"
+    "@vitejs/plugin-vue": "^4.0.0"
   },
   "engines": {
     "node": "^20 || ^19 || ^18 || ^16 || ^14.19",
