format & move github action to bun

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -22,30 +22,9 @@ jobs:
           distribution: "zulu" # See 'Supported distributions' for available options
           java-version: "17"
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
+      - uses: oven-sh/setup-bun@v1
         with:
-          node-version: 18
-
-      - uses: pnpm/action-setup@v2.0.1
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 8.3.1
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          bun-version: latest
 
       - name: Install depends
         run: sh install.sh
@@ -61,10 +40,10 @@ jobs:
           echo '${{ secrets.GOOGLE_SERVICES }}' > src-capacitor/android/google-services.json
 
       - name: Build Quasar
-        run: pnpm build:android:ci
+        run: bun build:android:ci
 
       - name: Build zip update OTA
-        run: pnpm build:capgo
+        run: bun build:capgo
 
       - name: Build Android App
         uses: anime-vsub/android-build-action@1.2.1
