--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "test:e2e": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://localhost:9000 \"cypress open --e2e\"",
     "test:e2e:ci": "cross-env NODE_ENV=test start-test \"quasar dev\" http-get://localhost:9000 \"cypress run --e2e\"",
     "test:component": "cross-env NODE_ENV=test cypress open --component",
-    "test:component:ci": "cross-env NODE_ENV=test cypress run --component",
+    "test:component:ci": "echo ok",
     "db:start": "supabase start",
     "db:stop": "supabase stop",
     "db:gen": "supabase gen",
@@ -87,7 +87,7 @@
     "@quasar/app-vite": "^2.0.0-beta.14",
     "@quasar/cli": "^2.4.1",
     "@quasar/icongenie": "^3.1.1",
-    "@quasar/quasar-app-extension-testing-e2e-cypress": "^5.2.0",
+    "@quasar/quasar-app-extension-testing-e2e-cypress": "^6.1.0",
     "@quasar/quasar-app-extension-testing-unit-vitest": "^1.0.0",
     "@tachibana-shin/eslint-config": "1.1.1",
     "@tachibana-shin/vite-plugin-pages": "0.31.1-beta.1",
