--- a/src-capacitor/package.json
+++ b/src-capacitor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tonarinoae",
+  "name": "Example",
   "version": "0.0.1",
   "description": "となりのアニメえっち (Tonari no Anime Ecchi)",
   "author": "Tachibana Shin <45375496+tachibana-shin@users.noreply.github.com>",
